src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__illegal_semicolon_in_call_parameters.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error: Missing expected Token [KeywordParensClose]
  ┌─ <internal>:3:28
  │
3 │                     buz(a,b; c);
  │                            ^ Missing expected Token [KeywordParensClose]

error: Unexpected token: expected KeywordParensClose but found ';'
  ┌─ <internal>:3:28
  │
3 │                     buz(a,b; c);
  │                            ^ Unexpected token: expected KeywordParensClose but found ';'

error: Unexpected token: expected KeywordSemicolon but found ')'
  ┌─ <internal>:3:31
  │
3 │                     buz(a,b; c);
  │                               ^ Unexpected token: expected KeywordSemicolon but found ')'


